5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4362/executions/1633_2945.log
== TEST (2019-04-02 18:07:13) 
-- CODE:
M= d*2*t*pi*p/4
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M= d*2*t*pi*p/4
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:31) 
-- CODE:
M= 3,14*2*t*pi*p/4
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M= 3,14*2*t*pi*p/4
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:44) 
-- CODE:
M= 3,14*2*12*pi*p/4
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M= 3,14*2*12*pi*p/4
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:55) 
-- CODE:
M= 3,14*2*12*10*1/4
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:08) 
-- CODE:
M= 3,14*2*12*10*1/4
round(100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:08:12) 
-- CODE:
M= 3,14*2*12*10*1/4
round(100)
-- EXECUTION TIME:
0.200866
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:

-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:

-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:46) 
-- CODE:
M= 3,14*2*12*math*1/4
round(100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    M= 3,14*2*12*math*1/4
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:11) 
-- CODE:
print(3,14)

round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:11:18) 
-- CODE:
print(3,14)

round(10)
-- EXECUTION TIME:
0.118632
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
3 14
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
3 14
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
3 14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:11:26) 
-- CODE:
print(3,14)
-- EXECUTION TIME:
0.116769
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
3 14
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
3 14
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
3 14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:28) 
-- CODE:
print(3,14)
-- OUTPUT:
3 14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:11:31) 
-- CODE:
print(3,14)
-- EXECUTION TIME:
0.165513
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
3 14
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
3 14
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
3 14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:22) 
-- CODE:
a=6
print(a)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:15:24) 
-- CODE:
a=6
print(a)
-- EXECUTION TIME:
0.150689
-- TEST CASE 1:
---- input:
50.4
0.02
30
---- correct output:
1197.02
---- user output:
6
-- TEST CASE 2:
---- input:
5.0
0.20
10
---- correct output:
39.27
---- user output:
6
-- TEST CASE 3:
---- input:
20
0.02
20
---- correct output:
125.66
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:25) 
-- CODE:
m= inputd*2*t*3,14*p
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m= inputd*2*t*3,14*p
NameError: name 'inputd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:43) 
-- CODE:
m= input(d*2*t*3,14*p/4)
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m= input(d*2*t*3,14*p/4)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:25) 
-- CODE:
print(math)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(math)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
